--- a/aboutAFP.html
+++ b/aboutAFP.html
@@ -59,7 +59,7 @@
         text-decoration: underline #fdde87c7;
     }
     /* Key Access style */
-    .access-key-popup {
+    /* .access-key-popup {
         display: none;
         position: fixed;
         top: 50%;
@@ -69,7 +69,7 @@
         background-color: #fff;
         border: 1px solid #ccc;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
+    } */
 
     /* Drop down Login
     #dropdown-container {
@@ -295,13 +295,13 @@
         </footer>
     </div>
     <!-- Access Key Popup -->
-    <div id="accessKeyPopup" class="access-key-popup">
+    <!-- <div id="accessKeyPopup" class="access-key-popup">
         <label for="accessKeyInput">Enter Access Key:</label>
         <input type="text" id="accessKeyInput">
         <button onclick="validateAccessKey()">Submit</button>
-    </div>
+    </div> -->
     <!-- Access key Popup -->
-    <script>
+    <!-- <script>
         // Function to validate the access key and redirect to the login link
         function validateAccessKey() {
             var enteredKey = document.getElementById("accessKeyInput").value;
@@ -325,7 +325,7 @@
             event.preventDefault(); // Prevent the default link behavior
             showAccessKeyPopup();
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
