--- a/homeAFP.html
+++ b/homeAFP.html
@@ -58,7 +58,7 @@
     }
 
     /* Key Access style */
-    .access-key-popup {
+    /* .access-key-popup {
         display: none;
         position: fixed;
         top: 50%;
@@ -68,7 +68,7 @@
         background-color: #fff;
         border: 1px solid #ccc;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
+    } */
 
     /* Drop down Login
     #dropdown-container {
@@ -386,12 +386,12 @@
         </footer>
 
     </div>
-    <!-- Access Key Popup -->
+    <!-- Access Key Popup
     <div id="accessKeyPopup" class="access-key-popup">
         <label for="accessKeyInput">Enter Access Key:</label>
         <input type="text" id="accessKeyInput">
         <button onclick="validateAccessKey()">Submit</button>
-    </div>
+    </div> -->
     <!-- For Slides -->
     <script>
         let slideIndex = 1;
@@ -423,7 +423,7 @@
           captionText.innerHTML = dots[slideIndex-1].alt;
         }
     </script>
-    <!-- Access key pop-up -->
+    <!-- Access key pop-up
     <script>
         // Function to validate the access key and redirect to the login link
         function validateAccessKey() {
@@ -448,7 +448,7 @@
             event.preventDefault(); // Prevent the default link behavior
             showAccessKeyPopup();
         });
-    </script>
+    </script> -->
 </body>
 </html>
 
