--- a/servicesAFP.html
+++ b/servicesAFP.html
@@ -57,7 +57,7 @@
         text-decoration: underline #fdde87c7;
     }
         /* Key Access style */
-        .access-key-popup {
+        /* .access-key-popup {
         display: none;
         position: fixed;
         top: 50%;
@@ -67,7 +67,7 @@
         background-color: #fff;
         border: 1px solid #ccc;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
+    } */
 
     /* Drop down Login
     #dropdown-container {
@@ -296,7 +296,7 @@
         <button onclick="validateAccessKey()">Submit</button>
     </div>
     <!-- Access key Popup -->
-    <script>
+    <!-- <script>
         // Function to validate the access key and redirect to the login link
         function validateAccessKey() {
             var enteredKey = document.getElementById("accessKeyInput").value;
@@ -320,6 +320,6 @@
             event.preventDefault(); // Prevent the default link behavior
             showAccessKeyPopup();
         });
-    </script>
+    </script> -->
 </body>
 </html>
