--- a/products.html
+++ b/products.html
@@ -56,7 +56,7 @@
         text-decoration: underline #fdde87c7;
     }
         /* Key Access style */
-        .access-key-popup {
+        /* .access-key-popup {
         display: none;
         position: fixed;
         top: 50%;
@@ -66,7 +66,17 @@
         background-color: #fff;
         border: 1px solid #ccc;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
+    } /* .access-key-popup {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    } */
 
     /* Drop down Login
     #dropdown-container {
@@ -163,7 +173,8 @@
     }
     .product-container {
         text-align: center;
-        display: block;
+        position: relative;
+        overflow: hidden;
         padding-bottom:50px;
         background-color: #1111119f;
         margin: 20px;
@@ -175,7 +186,6 @@
     .product-container .price {
         background-color: black; 
         position: relative; 
-        top: 15%;
     }
     .product-container img {
         border-radius: 40%;
@@ -185,8 +195,24 @@
         padding:10px 20px 0 20px;
         &:hover {transform: scale(1.05);}
     }
+    
     .product-container button {
         margin-top: 5px;
+        position: absolute;
+        bottom: -30px;
+        left: 80px;
+        opacity: 0;
+        transition: bottom 0.3s ease, opacity 0.3s ease;
+        background-color: transparent;
+        border: none;
+        padding:10px;
+        color:white;
+        cursor: pointer;
+        background-color: #14ad00;
+    }
+    .product-container:hover button {
+      bottom: 0;
+      opacity: 1;
     }
 
    /*FOOOOOOOOOOOOOOOOOOOOOTTTTTTTTTTTTTTTTTTTTTEEEEEEEEEEEEEEEEEEEERRRRRRRRR*/
@@ -218,9 +244,7 @@
             }
 
         }
-
-
-
+    
 </style>
 </head>
 <body>
@@ -263,7 +287,7 @@
                         <div class="product-container">
                             <p class="products-name">Apple</p>
                             <img src="Pics/Products-Pics/friuts/Apple.jpg"/>
-                            <div><price></price><button type="submit" name="submit">Add to Cart</button></div>
+                            <div><button type="submit" name="submit">Add to Cart</button></div>
                             <div class="price">Price: 100/kg</div>  
                         </div>
                         <div class="product-container">
@@ -441,13 +465,13 @@
         </footer>
     </div>
     <!-- Access Key Popup -->
-    <div id="accessKeyPopup" class="access-key-popup">
+    <!-- <div id="accessKeyPopup" class="access-key-popup">
         <label for="accessKeyInput">Enter Access Key:</label>
         <input type="text" id="accessKeyInput">
         <button onclick="validateAccessKey()">Submit</button>
-    </div>
+    </div> -->
     <!-- Access key Popup -->
-    <script>
+    <!-- <script>
         // Function to validate the access key and redirect to the login link
         function validateAccessKey() {
             var enteredKey = document.getElementById("accessKeyInput").value;
@@ -471,6 +495,6 @@
             event.preventDefault(); // Prevent the default link behavior
             showAccessKeyPopup();
         });
-    </script>
+    </script> -->
 </body>
 </html>
