--- a/dashboard.html
+++ b/dashboard.html
@@ -402,13 +402,13 @@
             <li class="burgLine"></li>
             <li class="burgLine"></li>
             <ul id="menu">
-                <a href="#">
+                <a href="dashboard.html">
                     <li><img src="Pics/Dashboard-Pics/final-pic/dashboard.png" /><span>DASHBOARD</span></li>
                 </a>
-                <a href="#">
+                <a href="dashboardtabs/ordertab.html">
                     <li><img src="Pics/Dashboard-Pics/final-pic/order.png" /><span>ORDERS</span></li>
                 </a>
-                <a href="#">
+                <a href="dashboardtabs/inventory.html">
                     <li>
                         <img src="Pics/Dashboard-Pics/final-pic/inventory.png" /><span>INVENTORY<span></span></span>
                     </li>
