--- a/dashboardtabs/ordertab.html
+++ b/dashboardtabs/ordertab.html
@@ -231,7 +231,7 @@
     }
 
     function goBack() {
-        window.location.href = 'dashboard.html'; // Replace with the actual HTML page
+        window.location.href = '../dashboard.html'; // Replace with the actual HTML page
     }
 
     function clearFilters() {
