--- a/dashboardtabs/inventory.html
+++ b/dashboardtabs/inventory.html
@@ -196,7 +196,7 @@
     ];
 
     function goBack() {
-        window.location.href = 'dashboard.html'; // Replace with the actual HTML page
+        window.location.href = '../dashboard.html'; // Replace with the actual HTML page
     }
 
     function addProduct() {
