Dashboard One file & Add to Cart Function
*Dashboard side tabs (connected some of the side tab functionality (incomplete))
- Dashboard
- Inventory
- Orders
- Sales (To be Implemented)
- teams (not Ready)

*Products (working on connection to dashboard tabs and database)
- add disable functionality to add to cart after adding it to cart
- add enable functionality to add to cart after the corresponding item/products is/are removed in the cart

*other
- just cleaning the codes

--- a/products.html
+++ b/products.html
@@ -570,8 +570,20 @@
         function removeSelectedItem(item) {
             const itemIndex = cartItems.indexOf(item);
             if (itemIndex !== -1) {
+                // Remove the item from the cartItems array
                 cartItems.splice(itemIndex, 1);
+    
+                // Update the selected items section
                 updateSelectedItemsSection();
+    
+                // Find the corresponding product container and enable the button
+                const productContainers = document.querySelectorAll('.product-container');
+                productContainers.forEach(container => {
+                    const productName = container.querySelector('.products-name').textContent;
+                    if (productName === item) {
+                        container.querySelector('button').classList.remove('disabled');
+                    }
+                });
             }
         }
 
