--- a/homeAFP.html
+++ b/homeAFP.html
@@ -280,7 +280,7 @@
                 <div id="menu">
                     <a style="text-decoration: underline rgb(197, 115, 47); color: rgb(197, 115, 47);" href="homeAFP.html"><span>Home</span></a>
                     <a href="aboutAFP.html"><span>About</span></a>
-                    <a href="products.html"><span>Products</span></a>
+                    <a href="http://localhost/AFP/products.php"><span>Products</span></a>
                     <a href="servicesAFP.html"><span>Services<span></a>
                     <a id="loginLink" href="http://localhost/AFP/loginAFP.php">Log-in</a>
                     <!-- <div id="dropdown">
